Added icnons for the buttons

--- a/index.html
+++ b/index.html
@@ -5,17 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="assets/index.js" defer></script>
+    <script src="https://kit.fontawesome.com/1d81df9ef3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
 <body>
     <main>
         <canvas></canvas>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
-        <button></button>
+        <button><i class="fa-solid fa-hand-back-fist"> <br> Rock </i></button>
+        <button><i class="fa-solid fa-hand"> <br> Paper </i></button>
+        <button><i class="fa-solid fa-hand-scissors"> <br> Scissors </i></button>
+        <button><i class="fa-solid fa-hand-lizard"> <br> Lizard </i></button>
+        <button><i class="fa-solid fa-hand-spock"> <br> Spock </i></button>
     </main>
 </body>
 </html>
