Centered buttons and canvas positions

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Document</title>
 </head>
-<body>
+<body class="wrapper">
     <main>
         <canvas></canvas>
         <button><i class="fa-solid fa-hand-back-fist"> <br> Rock </i></button>
