Added event listeners and button functions

--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
 <body class="wrapper">
     <main>
         <canvas></canvas>
-        <button><i class="fa-solid fa-hand-back-fist"> <br> Rock </i></button>
-        <button><i class="fa-solid fa-hand"> <br> Paper </i></button>
-        <button><i class="fa-solid fa-hand-scissors"> <br> Scissors </i></button>
-        <button><i class="fa-solid fa-hand-lizard"> <br> Lizard </i></button>
-        <button><i class="fa-solid fa-hand-spock"> <br> Spock </i></button>
+        <button><i class="fa-solid fa-hand-back-fist" onclick="rockFunction()"> <br> Rock </i></button>
+        <button><i class="fa-solid fa-hand" onclick="paperFunction()"> <br> Paper </i></button>
+        <button><i class="fa-solid fa-hand-scissors" onclick="scissorsFunction()"> <br> Scissors </i></button>
+        <button><i class="fa-solid fa-hand-lizard" onclick="lizardFunction()"> <br> Lizard </i></button>
+        <button><i class="fa-solid fa-hand-spock" onclick="spockFunction()"> <br> Spock </i></button>
     </main>
 </body>
 </html>
