Added pool of random computer choices

--- a/index.html
+++ b/index.html
@@ -11,12 +11,16 @@
 </head>
 <body class="wrapper">
     <main>
-        <canvas></canvas>
-        <button><i class="fa-solid fa-hand-back-fist" onclick="rockFunction()"> <br> Rock </i></button>
-        <button><i class="fa-solid fa-hand" onclick="paperFunction()"> <br> Paper </i></button>
-        <button><i class="fa-solid fa-hand-scissors" onclick="scissorsFunction()"> <br> Scissors </i></button>
-        <button><i class="fa-solid fa-hand-lizard" onclick="lizardFunction()"> <br> Lizard </i></button>
-        <button><i class="fa-solid fa-hand-spock" onclick="spockFunction()"> <br> Spock </i></button>
+        <canvas id="canvas"></canvas>
+        <h3 id="player_choice"></h3>
+        <h3 id="computer_choice"></h3>
+        <h3 id="player_score"></h3>
+        <h3 id="computer_score"></h3>
+        <button><i class="fa-solid fa-hand-back-fist" id="rock"> <br> Rock </i></button>
+        <button><i class="fa-solid fa-hand" id="paper"> <br> Paper </i></button>
+        <button><i class="fa-solid fa-hand-scissors" id="scissors"> <br> Scissors </i></button>
+        <button><i class="fa-solid fa-hand-lizard" id="lizard"> <br> Lizard </i></button>
+        <button><i class="fa-solid fa-hand-spock" id="spock"> <br> Spock </i></button>
     </main>
 </body>
 </html>
