Refactoring javascript code, created button functions

--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
 <body class="wrapper">
     <main>
         <canvas id="canvas"></canvas>
-        <h3 id="player_choice"></h3>
-        <h3 id="computer_choice"></h3>
-        <h3 id="player_score"></h3>
-        <h3 id="computer_score"></h3>
-        <button><i class="fa-solid fa-hand-back-fist" id="rock"> <br> Rock </i></button>
-        <button><i class="fa-solid fa-hand" id="paper"> <br> Paper </i></button>
-        <button><i class="fa-solid fa-hand-scissors" id="scissors"> <br> Scissors </i></button>
-        <button><i class="fa-solid fa-hand-lizard" id="lizard"> <br> Lizard </i></button>
-        <button><i class="fa-solid fa-hand-spock" id="spock"> <br> Spock </i></button>
+        <h3 id="player_choice">Player: </h3>
+        <h3 id="computer_choice">Computer: </h3>
+        <h3 id="player_score">Player score: </h3>
+        <h3 id="computer_score">Computer score: </h3>
+        <button id="rock" onclick="rockFunction()"><i class="fa-solid fa-hand-back-fist"> <br> Rock </i></button>
+        <button id="paper" onclick="paperFunction()"><i class="fa-solid fa-hand"> <br> Paper </i></button>
+        <button id="scissors" onclick="scissorsFunction()"><i class="fa-solid fa-hand-scissors"> <br> Scissors </i></button>
+        <button id="lizard" onclick="lizardFunction()"><i class="fa-solid fa-hand-lizard"> <br> Lizard </i></button>
+        <button id="spock" onclick="spockFunction()"><i class="fa-solid fa-hand-spock"> <br> Spock </i></button>
     </main>
 </body>
 </html>
