--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
         <h3 id="computer_choice">Computer: </h3>
         <h3 id="player_score">Player score: </h3>
         <h3 id="computer_score">Computer score: </h3>
-        <button id="rock" onclick="rockFunction()"><i class="fa-solid fa-hand-back-fist"> <br> Rock </i></button>
-        <button id="paper" onclick="paperFunction()"><i class="fa-solid fa-hand"> <br> Paper </i></button>
-        <button id="scissors" onclick="scissorsFunction()"><i class="fa-solid fa-hand-scissors"> <br> Scissors </i></button>
-        <button id="lizard" onclick="lizardFunction()"><i class="fa-solid fa-hand-lizard"> <br> Lizard </i></button>
-        <button id="spock" onclick="spockFunction()"><i class="fa-solid fa-hand-spock"> <br> Spock </i></button>
+        <button id="rock"><i class="fa-solid fa-hand-back-fist"> <br> Rock </i></button>
+        <button id="paper"><i class="fa-solid fa-hand"> <br> Paper </i></button>
+        <button id="scissors"><i class="fa-solid fa-hand-scissors"> <br> Scissors </i></button>
+        <button id="lizard"><i class="fa-solid fa-hand-lizard"> <br> Lizard </i></button>
+        <button id="spock"><i class="fa-solid fa-hand-spock"> <br> Spock </i></button>
     </main>
 </body>
 </html>
