Fixed game logics, added player/computer score and choices

--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
 </head>
 <body class="wrapper">
     <main>
-        <canvas id="canvas"></canvas>
+        <!--<canvas id="canvas"></canvas>-->
         <h3 id="player_choice">Player: </h3>
         <h3 id="computer_choice">Computer: </h3>
         <h3 id="player_score">Player score: </h3>
         <h3 id="computer_score">Computer score: </h3>
+        <h3 id="show_result">Result: </h3>
         <button class="rock"><i class="fa-solid fa-hand-back-fist"> <br> Rock </i></button>
         <button class="paper"><i class="fa-solid fa-hand"> <br> Paper </i></button>
         <button class="scissors"><i class="fa-solid fa-hand-scissors"> <br> Scissors </i></button>
