--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <title>Rock-Paper-Scissors</title>
 </head>
 <body class="wrapper">
-    <main>
+    <main id="main_body">
         <!--<canvas id="canvas"></canvas>-->
+        <h1 id="titile">Rock-Paper-Scissors-Lizard-Spock</h1>
         <h3 id="player_choice">Player: </h3>
         <h3 id="computer_choice">Computer: </h3>
         <h3 id="player_score">Player score: </h3>
