Changed the positioning of content for better experience

--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <main id="main_body">
         <!--<canvas id="canvas"></canvas>-->
         <h1 id="titile">Rock-Paper-Scissors-Lizard-Spock</h1>
-        <h3 id="player_choice">Player: </h3>
-        <h3 id="computer_choice">Computer: </h3>
-        <h3 id="player_score">Player score: </h3>
-        <h3 id="computer_score">Computer score: </h3>
+        <section id="play_section">
+            <h3 id="player_choice">Player: </h3>
+            <h3 id="computer_choice">Computer: </h3>
+        </section>
+        <section id="score_section">
+            <h3 id="player_score">Player score: </h3>
+            <h3 id="computer_score">Computer score: </h3>
+        </section>
         <h3 id="show_result">Result: </h3>
         <button class="rock"><i class="fa-solid fa-hand-back-fist"> <br> Rock </i></button>
         <button class="paper"><i class="fa-solid fa-hand"> <br> Paper </i></button>
