--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
     <script src="assets/script.js" defer></script>
     <script src="https://kit.fontawesome.com/1d81df9ef3.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/style.css">
-    <title>Rock-Paper-Scissors</title>
+    <title>Rock-Paper-Scissors-Lizard-Spock</title>
 </head>
 <body class="wrapper">
     <main id="main_body">
-        <!--<canvas id="canvas"></canvas>-->
         <h1 id="titile">Rock-Paper-Scissors-Lizard-Spock</h1>
         <section id="play_section">
             <h3 id="player_choice">Player: </h3>
