Testing start button screen

--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
     <link rel="stylesheet" href="assets/style.css">
     <title>Rock-Paper-Scissors-Lizard-Spock</title>
 </head>
-<body class="wrapper">
-    <main id="main_body">
+<body class="wrapper" >
+    <main id="main_body" class="game_screen">
+        <div id="start_screen">
+            <label id="lblGreetings"></label>
+            <button id="start_button">Start Game</button>
+        </div>
         <h1 id="titile">Rock-Paper-Scissors-Lizard-Spock</h1>
         <section id="play_section">
             <h3 id="player_choice">Player: </h3>
