--- a/index.html
+++ b/index.html
@@ -10,10 +10,14 @@
     <title>Rock-Paper-Scissors-Lizard-Spock</title>
 </head>
 <body class="wrapper" >
+
     <main id="main_body" class="game_screen">
         <div id="start_screen">
             <label id="lblGreetings"></label>
             <button id="start_button">Start Game</button>
+        </div>
+        <div>
+            <button id="game_over">Play Again!</button>
         </div>
         <h1 id="titile">Rock-Paper-Scissors-Lizard-Spock</h1>
         <section id="play_section">
