Added winner screen with a get winner score and play again button

--- a/index.html
+++ b/index.html
@@ -10,14 +10,10 @@
     <title>Rock-Paper-Scissors-Lizard-Spock</title>
 </head>
 <body class="wrapper" >
-
     <main id="main_body" class="game_screen">
         <div id="start_screen">
             <label id="lblGreetings"></label>
             <button id="start_button">Start Game</button>
-        </div>
-        <div>
-            <button id="game_over">Play Again!</button>
         </div>
         <h1 id="titile">Rock-Paper-Scissors-Lizard-Spock</h1>
         <section id="play_section">
@@ -34,6 +30,10 @@
         <button class="scissors"><i class="fa-solid fa-hand-scissors"> <br> Scissors </i></button>
         <button class="lizard"><i class="fa-solid fa-hand-lizard"> <br> Lizard </i></button>
         <button class="spock"><i class="fa-solid fa-hand-spock"> <br> Spock </i></button>
+        <div id="game_over_screen">
+            <button id="play_again_button">Play Again!</button>
+            <h3 id="get_winner">Game Result: </h3>
+        </div>
     </main>
 </body>
 </html>
