Added missing lines to spock and lizard win/lose conditions, added math.max and switch statements to computer to make a better play

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <button class="spock"><i class="fa-solid fa-hand-spock"> <br> Spock </i></button>
         <div id="game_over_screen">
             <button id="play_again_button">Play Again!</button>
-            <h3 id="get_winner">Game Result: </h3>
+            <h3 id="get_winner"></h3>
         </div>
     </main>
 </body>
